--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
     </div>
     
+    <script src="side-hustles.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
