feat: implement job filtering, sorting and display functionality with DOM updates

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="content-wrapper">
             <div class="left-section">
                 <div class="main-container">
-                    <div class="hustle-item" id="numOne">numOne</div>
-                    <div class="hustle-item" id="numTwo">numTwo</div>
-                    <div class="hustle-item" id="numThree">numThree</div>
-                    <div class="hustle-item" id="numFour">numFour</div>
-                    <div class="hustle-item" id="numFive">numFive</div>
+                    <div class="hustle-item" id="numOne">Job One</div>
+                    <div class="hustle-item" id="numTwo">Job Two</div>
+                    <div class="hustle-item" id="numThree">Job Three</div>
+                    <div class="hustle-item" id="numFour">Job Four</div>
+                    <div class="hustle-item" id="numFive">Job Five</div>
                 </div>
                 
                 <div class="button-container">
-                    <button class="action-button" id="buttonOne">buttonOne</button>
-                    <button class="action-button" id="buttonTwo">buttonTwo</button>
+                    <button class="action-button" id="buttonOne">Highest Paying</button>
+                    <button class="action-button" id="buttonTwo">Lowest Costs</button>
                 </div>
             </div>
             
